Emotion analysis of the notes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # ONNX Runtime for emotion detection
   onnxruntime: ^1.4.1
   path_provider: ^2.0.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
