--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,8 +64,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/model.onnx
-    - assets/vocab.txt
+    - assets/bert-emotion/model.onnx
+    - assets/bert-emotion/vocab.txt
+    - assets/smollm2/model.onnx
+    - assets/smollm2/vocab.json
+    - assets/smollm2/merges.txt
+    - assets/smollm2/tokenizer.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
